--- a/view/pom.xml
+++ b/view/pom.xml
@@ -4,19 +4,19 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.jbundle.base.screen</groupId>
-    <artifactId>jbundle-view-swing-reactor</artifactId>
+    <groupId>org.jbundle.javafx.config</groupId>
+    <artifactId>jbundle-view-javafx-reactor</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>org.jbundle.base.screen.view.swing</artifactId>
+  <artifactId>org.jbundle.base.screen.view.javafx</artifactId>
   <packaging>bundle</packaging>
-  <name>jbundle-base-screen-view-swing</name>
+  <name>jbundle-base-screen-view-javafx</name>
 
   <properties>
     <jbundlePackageExport>
-      org.jbundle.base.screen.control.swing.*;version=${project.version},
-      org.jbundle.base.screen.view.swing.*;version=${project.version},
+      org.jbundle.base.screen.control.javafx.*;version=${project.version},
+      org.jbundle.base.screen.view.javafx.*;version=${project.version},
       org.jbundle;version=${project.version},
     </jbundlePackageExport>	<!-- Bundle package to export - Ignore Main -->
   </properties>
