--- a/view/pom.xml
+++ b/view/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.jbundle.javafx.config</groupId>
     <artifactId>jbundle-view-javafx-reactor</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>org.jbundle.base.screen.view.javafx</artifactId>
